client/public/css/styles.css
/*==========index.html==========*/
.social {
  height: 50px;
  width: 50px;
  text-align: center;
}
.social:hover {
  -webkit-filter:saturate(2.0);
}
.modal-row {
  margin-bottom: 0;
}
/*=====footer=====*/
.footer-row-title{
  color:white;
}
.social-footer{
  height:15px;
  width:15px;
  padding-top: 2px;
}

/*changes background of popped-out portion*/
#footer-collapsible{
  border-color: #ee6e73;

}
/*changes color of non-popped-out collapsible*/
.footer-collapsible-header{
  background-color: #ee6e73;
}

.drop-down-container{
  font-size:12px;
  padding: 5px;
}

/*==========landing.html==========*/

.dev-team{
  text-align: center;
}

.collection-item.avatar {
  height: 60px;
  width: 60px;
}

/*=====FAQ=====*/

/*=====tech-stack=====*/
#tech-stack-container{
  padding-left: 2em;
}

/*=====team-intro cards=====*/
.card-reveal-content{
  font-size:.8em;
}

/*changes size of p-content below card title*/
.card-content{
  font-size:.8em;
}

.card-spacer{
  padding-top: .4em;
}

.card-title-sizer{
  font-size:1em;
}

/*===========dashboard===========*/

.price {
  float:right;
  font-size:16px;
  color:green;
}

/*========create-recipes=========*/

.addButton {
  position:relative;
  min-height:50px;
}

.bottom {
  position:absolute;
  bottom:0;
  left:0;
}

.trash-small {
  height:18px;
  width:18px;
}

.trash-icon-small {
  font-size:16px;
  position:relative;
  bottom:13px;
}

/*========dashboard=========*/
.card-small {
  min-width: 250px;
}

.container .ng-scope {
  width: 100%;
}

/*========shopping-list=========*/

.quantity {
  width:50px;
}

.priceForm {
  display:inline-block;
}

/*============fridge============*/

.bottom-right {
  bottom: 45px;
  right: 24px;
}

.minus {
  position:relative;
  bottom:12px;
}

.minus-small {
  height:12px;
  width:12px;
}

